vcs/specs/parser/fail/generics/unclosed_where.vr
// @test: parse-fail
// @level: L0
// @tags: parser, generics, where, unclosed, error
// @description: Test unclosed where clause constraint
// @expected-error: E018

fn foo<T>() where T: {
    let x: T;
}
